--- a/login.css
+++ b/login.css
@@ -6,8 +6,12 @@
 	margin-bottom: 30%;
 	height: 40%;
 	text-align: center;
-	padding: 25px 5px;
+	padding: 90px 5px;
 	color: #430C51;
 	font-family: "Open Sans";
 	font-size: 15px;
+}
+
+#loginButton{
+	padding-top: 5px;
 }
