--- a/login.css
+++ b/login.css
@@ -2,9 +2,9 @@
 	border: solid 1px #430C51;
 	border-radius: 25px;
 	background-color: rgba(220, 222, 224, 0.85);	
-	margin-top: 30%;
-	margin-bottom: 30%;
-	height: 40%;
+	margin-top: 40%;
+	margin-bottom: 60%;
+	height: auto;
 	text-align: center;
 	padding: 20px 5px;
 	color: #430C51;
